force-app/main/default/objects/OpportunityLineItem/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>