force-app/main/default/objects/OpportunityLineItem/fields/Inner_Margin_Value__c.field-meta.xml
<CustomField>
    <fullName>Inner_Margin_Value__c</fullName>
    <label>Inner Margin Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>